--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,4 +61,11 @@
         android:visibility="invisible"
         android:onClick="soundplayer"/>
 
+    <Spinner
+        android:id="@+id/spins"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:entries="@array/Alignment"
+        android:layout_marginTop="200dp"/>
+
 </RelativeLayout>
